# fixedpoint-control

./: .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
config/: fpc_build_config.h.in  fpc_conf.h.in  fpc_conf_template.h  fpc_version.h.in
include/: fpc_config.h  fpc_filters.h  fpc_pid.h  fpc_pool_config.h  fpc_status.h
src/: filters.c  meson.build  pid_controller.c
subprojects/: pool-allocator.wrap
tests/: meson.build  test_filters.c  test_pid.c
